--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Sync to gitee
 
 # Controls when the action will run. 
 on:
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: flee-lether/shortcut_badge_plugin@main
+      - uses: wearerequired/git-mirror-action@master
 
       # Runs a single command using the runners shell
       - name: Sync to gitee
