--- a/.github/workflows/sync-gitee.yml
+++ b/.github/workflows/sync-gitee.yml
@@ -23,7 +23,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: wearerequired/git-mirror-action@master
+      - uses: wearerequired/git-mirror-action@v1
 
       # Runs a single command using the runners shell
       - name: Sync to gitee
